--- a/templates/estancias.html
+++ b/templates/estancias.html
@@ -7,9 +7,9 @@
     <h1>Lista de Estancias</h1>
     <ul>
         {% for id, estancia in estancias.items() %}
-        <li>
-            <a href="{{ url_for('ver_invitaciones', estancia_id=id) }}">{{ estancia.nombre }}</a>
-        </li>
+            <li>
+                <a href="{{ url_for('menu_estancia', estancia_id=id) }}">{{ estancia.nombre }}</a>
+            </li>
         {% endfor %}
     </ul>
 </body>
