--- a/templates/invitaciones.html
+++ b/templates/invitaciones.html
@@ -4,28 +4,20 @@
     <title>Invitaciones</title>
 </head>
 <body>
-    <h1>Invitaciones de {{ estancia.nombre }}</h1>
-
-    <a href="{{ url_for('ver_registros_estancia', estancia_id=estancia_id) }}">
-        <button style="padding: 8px 16px;">Ver registros de acceso</button>
-    </a>
-    <br><br>
-
+    <h1>Invitaciones - {{ estancia.nombre }}</h1>
     <table border="1">
         <tr>
             <th>Código</th>
-            <th>Nombre del Dispositivo</th>
+            <th>Dispositivo</th>
             <th>ID del Dispositivo</th>
         </tr>
-        {% for invitacion in estancia.invitaciones %}
-        <tr>
-            <td>{{ invitacion.codigo }}</td>
-            <td>{{ estancia.dispositivos[invitacion.dispositivo_id] }}</td>
-            <td>{{ invitacion.dispositivo_id }}</td>
-        </tr>
+        {% for inv in estancia.invitaciones %}
+            <tr>
+                <td>{{ inv.codigo }}</td>
+                <td>{{ estancia.dispositivos[inv.dispositivo_id] }}</td>
+                <td>{{ inv.dispositivo_id }}</td>
+            </tr>
         {% endfor %}
     </table>
-
-    <p><a href="{{ url_for('index') }}">← Volver a Estancias</a></p>
 </body>
 </html>
