--- a/templates/menu_estancia.html
+++ b/templates/menu_estancia.html
@@ -9,6 +9,7 @@
         <li><a href="{{ url_for('ver_invitaciones', estancia_id=estancia_id) }}">Ver invitaciones de acceso</a></li>
         <li><a href="{{ url_for('ver_registros', estancia_id=estancia_id) }}">Ver registros de acceso</a></li>
         <li><a href="{{ url_for('ver_dispositivos', estancia_id=estancia_id) }}">Ver dispositivos</a></li>
+        <li><a href="{{ url_for('validar_codigo_web', estancia_id=estancia_id) }}">Validar código de invitación</a></li>
     </ul>
 </body>
 </html>
